# agentY-comfyuiConnect

./: .gitignore  LICENSE  README.md  __init__.py  _filepicker.py  pyproject.toml
web/: agent_canvas.js  agent_chat.js  agent_collector.js  agent_hook.js  agent_icons.js  agent_log_viewer.js  agent_memory_viewer.js  agent_settings.js  agent_token_usage.js  iconsUI.json
